# new_admin_panel_sprint_1

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  docker-compose.yml  manage.py  requirements.txt
movies/: Dockerfile  docker-compose.dev.yml  entrypoint.sh  pyproject.toml
movies/app/: create_superuser.py  manage.py
movies/app/movies_admin/: urls.py
movies/config/: .env
movies/env_files/: movies.env.example
movies/movies_admin/settings/: __init__.py
sqlite_to_postgres/: .dockerignore  Dockerfile  README.md  carrier.py  docker-compose.dev.yml  entrypoint.sh  load_data.py  models.py  pg_conn_context.py  pyproject.toml  reader.py  settings.py  sqlite_conn_context.py  writer.py
sqlite_to_postgres/app/: apply_schemadb.py  clear_db.py  load_data.py
sqlite_to_postgres/app/copier/: copier.py  writer.py
sqlite_to_postgres/app/logger/: logger.py
sqlite_to_postgres/app/settings/: settings.py
sqlite_to_postgres/app/sql_schema_db/: movies_database.ddl
sqlite_to_postgres/copier/: copier.py  reader.py  writer.py
sqlite_to_postgres/db/: models.py  pg_conn_context.py
sqlite_to_postgres/env_files/: .env.db.example
sqlite_to_postgres/schema_design/: README.md  movies_database.ddl
sqlite_to_postgres/settings/: conf_readers.py  conf_writers.py  settings.py
sqlite_to_postgres/sqlite_to_postgres/: README.md  apply_schemadb.py  clear_db.py  db.sqlite.ddl  load_data.py
sqlite_to_postgres/sqlite_to_postgres/copier/: writer.py
sqlite_to_postgres/sqlite_to_postgres/settings/: settings.py  (+1 more)
sqlite_to_postgres/tools/: README.md  select_table.py
(+45 files in other folders)
